--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.10.1",
     "react-redux": "^7.2.2",
     "react-scripts": "^2.1.3",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "serve": "^11.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
