--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "moment": "^2.23.0",
     "react": "^16.14.0",
     "react-dom": "^16.10.1",
+    "react-icons": "^4.1.0",
     "react-redux": "^7.2.2",
     "react-scripts": "^2.1.3",
     "redux": "^4.0.5",
@@ -28,6 +29,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@iconify-icons/mdi": "^1.1.1",
+    "@iconify/react": "^1.1.3",
     "shave": "^2.5.4"
   }
 }
