--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.1",
+    "express": "^4.17.1",
+    "jquery": "^3.5.1",
     "moment": "^2.23.0",
     "react": "^16.14.0",
     "react-dom": "^16.10.1",
@@ -11,7 +13,8 @@
     "react-redux": "^7.2.2",
     "react-scripts": "^2.1.3",
     "redux": "^4.0.5",
-    "serve": "^11.3.2"
+    "serve": "^11.3.2",
+    "socket.io-client": "^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,6 +34,7 @@
   "devDependencies": {
     "@iconify-icons/mdi": "^1.1.1",
     "@iconify/react": "^1.1.3",
+    "react-socket-io": "^0.2.5",
     "shave": "^2.5.4"
   }
 }
