--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.2",
     "axios": "^0.18.1",
     "express": "^4.17.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "moment": "^2.23.0",
     "react": "^16.14.0",
@@ -15,6 +16,7 @@
     "react-scripts": "^2.1.3",
     "redux": "^4.0.5",
     "serve": "^11.3.2",
+    "socket.io": "^3.0.4",
     "socket.io-client": "^3.0.4"
   },
   "scripts": {
