--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.10.1",
     "react-icons": "^4.1.0",
+    "react-input-emoji": "^2.1.1",
     "react-redux": "^7.2.2",
     "react-scripts": "^2.1.3",
     "redux": "^4.0.5",
