--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
-    "moment": "^2.23.0",
+    "moment": "^2.29.1",
     "react": "^16.14.0",
-    "react-dom": "^16.10.1",
+    "react-dom": "^16.14.0",
     "react-icons": "^4.1.0",
     "react-input-emoji": "^2.1.1",
     "react-redux": "^7.2.2",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^2.1.8",
     "redux": "^4.0.5",
     "serve": "^11.3.2",
     "socket.io": "^3.0.4",
-    "socket.io-client": "^3.0.4"
+    "socket.io-client": "^3.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,9 +36,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@iconify-icons/mdi": "^1.1.1",
+    "@iconify-icons/mdi": "^1.1.2",
+    "@iconify/icons-mdi": "^1.1.2",
     "@iconify/react": "^1.1.3",
     "react-socket-io": "^0.2.5",
-    "shave": "^2.5.4"
+    "shave": "^2.5.10"
   }
 }
