--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "axios": "^0.18.1",
+    "bootstrap": "^4.5.3",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "moment": "^2.23.0",
+    "path": "^0.12.7",
     "react": "^16.14.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.10.1",
     "react-icons": "^4.1.0",
+    "react-images-upload": "^1.2.8",
     "react-input-emoji": "^2.1.1",
     "react-redux": "^7.2.2",
     "react-scripts": "^2.1.3",
     "redux": "^4.0.5",
+    "request": "^2.88.2",
     "serve": "^11.3.2",
     "socket.io": "^3.0.4",
     "socket.io-client": "^3.0.4"
