--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "all": "0.0.0",
     "axios": "^0.18.1",
     "bootstrap": "^4.5.3",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
+    "install": "^0.13.0",
     "jquery": "^3.5.1",
     "moment": "^2.23.0",
+    "package.json": "^2.0.1",
     "path": "^0.12.7",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.3",
